--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,23 @@
-
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/timekeeping
+#    username: springstudent
+#    password: springstudent
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    properties:
+#      hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
+#
 spring:
   jpa:
     open-in-view: on
+    hibernate:
+      ddl-auto: update
     properties:
       hibernate:
-        ddl-auto: update
         show_sql: false
         format_sql: true
   datasource:
@@ -16,7 +29,7 @@ spring:
       jdbc-url: jdbc:mysql://localhost:3306/timekeeping?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
       username: springstudent
       password: springstudent
-#      driver-class-name: ${spring.datasource.driver-class-name}
+      driver-class-name: ${spring.datasource.driver-class-name}
       auto-commit: true
       connection-timeout: 30000
       idle-timeout: 60000
