--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,12 @@
-#spring:
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/timekeeping
-#    username: springstudent
-#    password: springstudent
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
-#    properties:
-#      hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
-#
+server:
+  port: 8088
 
+#db:
+#  host:
+#  port:
+#  name:
+#  username:
+#  password:
 
 springdoc:
   api-docs:
@@ -21,25 +16,24 @@ springdoc:
     enabled: true
     path: /docs
 
-
 spring:
   jpa:
-    open-in-view: on
-    hibernate:
-      ddl-auto: update
+    open-in-view: off
+  hibernate:
+    ddl-auto: update
     properties:
       hibernate:
         show_sql: false
         format_sql: true
   datasource:
-    url: jdbc:mysql://localhost:3306/timekeeping?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-    username: springstudent
-    password: springstudent
+    url: ${DB_HOST}?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
-      jdbc-url: jdbc:mysql://localhost:3306/timekeeping?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-      username: springstudent
-      password: springstudent
+      jdbc-url: ${spring.datasource.url}
+      username: ${spring.datasource.username}
+      password: ${spring.datasource.password}
       driver-class-name: ${spring.datasource.driver-class-name}
       auto-commit: true
       connection-timeout: 30000
@@ -58,3 +52,48 @@ spring:
         cacheServerConfiguration: true
         elideSetAutoCommits: true
         maintainTimeStats: false
+  kafka:
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS}
+    group-id: ${SPRING_KAFKA_GROUP_ID}
+    topics:
+      user-attendance: user_attendance
+  quartz:
+    job-store-type: jdbc
+    jdbc:
+      initialize-schema: never
+    properties:
+      org.quartz.scheduler:
+        instanceName: Scheduler
+        instanceId: AUTO
+        makeSchedulerThreadDaemon: true
+      org.quartz.jobStore:
+        class: org.quartz.impl.jdbcjobstore.JobStoreTX
+        driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+        dataSource: dataSource
+        tablePrefix: QRTZ_
+      org.quartz.threadPool:
+        class: org.quartz.simpl.SimpleThreadPool
+        makeThreadsDaemons: true
+        threadCount: 20
+        threadPriority: 5
+      org.quartz.dataSource:
+        dataSource:
+          driver: com.mysql.cj.jdbc.Driver
+          URL: ${DB_HOST}?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+          user: ${DB_USERNAME}
+          password: ${DB_PASSWORD}
+          maxConnections: 20
+  redis:
+    host: ${REDIS_HOST:localhost} # Default to 'localhost' if not provided
+    port: ${REDIS_PORT:6379}
+#  redis:
+#    sentinel:
+#      master: redis-cluster               # Tên của Redis master set
+#      nodes: localhost:26379              # Địa chỉ của Sentinel
+#    password: springboot
+
+logging:
+  level:
+    org.springframework.scheduling.quartz: DEBUG
+    org.quartz: DEBUG
+    org.springframework.boot: DEBUG
